--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 alembic==1.15.2
+asgiref==3.8.1
 blinker==1.9.0
 chardet==5.2.0
 click==8.1.8
 colorama==0.4.6
+dj-database-url==2.3.0
+Django==5.2
+django-heroku==0.3.1
 et_xmlfile==2.0.0
 Flask==3.1.0
 Flask-Login==0.6.3
@@ -19,14 +23,16 @@ numpy==2.2.4
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.2.3
-pillow
+pillow==11.2.0
 psycopg2==2.9.10
 python-dateutil==2.9.0.post0
 pytz==2025.2
 reportlab==4.3.1
 six==1.17.0
 SQLAlchemy==2.0.40
+sqlparse==0.5.3
 typing_extensions==4.13.0
 tzdata==2025.2
 Werkzeug==3.1.3
+whitenoise==6.9.0
 WTForms==3.2.1
