--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ numpy==2.2.4
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.2.3
-pillow==11.2.0
+pillow
 psycopg2==2.9.10
 python-dateutil==2.9.0.post0
 pytz==2025.2
